# git-metadat

./: .gitattributes  .gitvendors  Cargo.toml  README.md
.config/: committed.toml  release-please-config.json  release-please-manifest.json
.github/workflows/: CD.yml  CI.yml
crates/git-chain/: Cargo.toml  README.md
crates/git-chain/src/: cli.rs  lib.rs  main.rs  tests.rs
crates/git-db/: Cargo.toml
crates/git-db/src/: lib.rs
crates/git-ledger/: CHANGELOG.md  Cargo.toml  README.md
crates/git-ledger/src/: cli.rs  lib.rs  main.rs  tests.rs
crates/git-metadata/: CHANGELOG.md  Cargo.toml
crates/git-store/: Cargo.toml
crates/git-store/src/: db.rs  git.rs  lib.rs  store.rs  tests.rs
docs/: plan.md
docs/design/: git-data.md  git-db.md  git-store.md
docs/dev/: git-store-dev-plan.md
src/: cli.rs  lib.rs  main.rs  tests.rs
